# backend/routes/blogRoutes.js
@@ -1,7 +1,6 @@
 import express from 'express'
-import { createBlog, deleteBlog, readBlogs, updateBlog } from '../controllers/blogControllers.js'
+import { createBlog, deleteBlog, readBlogs, requestDeleteBlog, updateBlog } from '../controllers/blogControllers.js'
 import { authMiddleware } from '../middlewares/authMiddleware.js'
-import swaggerJSDoc from 'swagger-jsdoc'
 
 const router = express.Router()
 
@@ -10,5 +9,6 @@ router.post("/create",createBlog)
 router.get("/read",readBlogs)
 router.put("/update/:id",updateBlog)
 router.delete("/delete/:id",deleteBlog)
+router.post("/:id/requestDelete",requestDeleteBlog)
 
 export default router
